# Parallel-Hooke-Jeeves

./: .gitignore  Cargo.toml  README.md  benchmark.sh  run.sh  rustfmt.toml
Hooke_Jeeves/: sequential.rs
Hooke_Jeeves/parallel/: hybrid.rs  mpi.rs  threads.rs
plots/scripts/: fig1.py  fig2.py
